tests/ui/malformed/malformed-meta-delim.stderr
error: wrong meta list delimiters
  --> $DIR/malformed-meta-delim.rs:3:9
   |
LL | #[allow { foo_lint } ]
   |         ^^^^^^^^^^^^
   |
help: the delimiters should be `(` and `)`
   |
LL - #[allow { foo_lint } ]
LL + #[allow ( foo_lint ) ]
   |

error: wrong meta list delimiters
  --> $DIR/malformed-meta-delim.rs:8:9
   |
LL | #[allow [ foo_lint ] ]
   |         ^^^^^^^^^^^^
   |
help: the delimiters should be `(` and `)`
   |
LL - #[allow [ foo_lint ] ]
LL + #[allow ( foo_lint ) ]
   |

error: aborting due to 2 previous errors

